# pigeoneer

./: .env.template  .gitignore  README.md  install-pigeoneer.ps1  pyproject.toml  run.py
src/pigeoneer/: __init__.py  cli.py  config.py  telegram.py  watcher.py
