[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pigeoneer"
version = "0.1.0"
authors = [
    { name = "cmcalder55" }
]
description = "A Path of Exile trade message watcher with Telegram notifications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
pigeoneer = "pigeoneer.cli:main"
